jenkins-k8s/tp2_infra_et_app/tp2_monsterstack_deploy_multienv/k8s/overlays/dev/monstericon-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monstericon
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: monstericon
        image: monstericon
        ports:
        - containerPort: 5000
          name: monster-port
        livenessProbe:
          tcpSocket:
            port: 5000
          initialDelaySeconds: 1
          periodSeconds: 5
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 1
        readinessProbe:
          httpGet:
            path: /healthz
            port: 5000
            httpHeaders:
            - name: Accept
              value: application/json
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
